2000-05-18  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Add imagesdir support.

	* e-gui-utils.c, e-gui-utils.h: Added e_create_image_widget for
	glade use.

2000-05-16  Christopher James Lahey  <clahey@helixcode.com>

	* e-xml-utils.c: xmlGetProp appears to return malloced memory.
	Thus we must free it.

2000-05-15  Ettore Perazzoli  <ettore@helixcode.com>

	* e-util.c (e_free_string_list): New function.

2000-05-14  Christopher James Lahey  <clahey@helixcode.com>

	* e-util.c, e-util.h: Added e_strdup_strip which returns a copy of
	the string with the leading and trailing spaces removed.

2000-05-11  NotZed  <NotZed@HelixCode.com>

	* e-sexp.c (e_sexp_finalise): Destroy the g_scanner when cleaning up.
	(e_sexp_finalise): Free symbol table on finalise.

2000-05-09  Christopher James Lahey  <clahey@helixcode.com>

	* e-canvas.c: Remove reflow idle when being destroyed.

2000-05-06  Christopher James Lahey  <clahey@helixcode.com>

	* e-html-utils.c: Got rid of some warnings.

	* e-util.c, e-util.h: Added e_read_file which takes a filename and
	returns a newly allocated string containing the contents of that
	file.

2000-05-03  Ettore Perazzoli  <ettore@helixcode.com>

	* e-util.h: #include <glib.h> and <gtk/gtktypeutils.h>.

	* e-util.c (e_free_object_list): New utility function.

2000-05-02  Damon Chaplin  <damon@helixcode.com>

	* e-canvas.c (e_canvas_focus_in): 
	(e_canvas_focus_out): set and reset the GTK_HAS_FOCUS flag. We now get
	focus_out events correctly.

2000-05-02  NotZed  <NotZed@HelixCode.com>

	* e-sexp.c (e_sexp_finalise): Free the parse tree if we have one.
	(e_sexp_parse): If we already have a parse tree, free it.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.

2000-05-01  Ettore Perazzoli  <ettore@helixcode.com>

	* e-xml-utils.c, e-xml-utils.h: Constified all the functions.

2000-04-27  Dan Winship  <danw@helixcode.com>

	* e-html-utils.c (e_text_to_html): Moved here from the mailer,